# PythonProjectTemplate

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  ci.yml  codeql.yml
src/: functions.py
tests/: test_functions.py
