[tool.poetry]
name = "pythonprojecttemplate"
version = "0.1.0"
description = "Basic Python environment setup"
authors = ["Simen Håpnes <simen.haapnes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
pre-commit = "^3.6.0"
pytest = "^7.4.3"

[tool.isort]
profile = "black"

[tool.black]
target-version = ["py311"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
